--- a/index.html
+++ b/index.html
@@ -13,13 +13,78 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- /font awesome  -->
+    <!-- google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <!-- /google fonts  -->
     <link rel="stylesheet" href="style.css">
     <title>Bootstrap Dashboard</title>
 </head>
 
 <body>
-    <header></header>
-    <main></main>
+    <header class="container-fluid ms-bg-main">
+        <div class="row">
+            <div class="col-auto">
+                Col Auto
+            </div>
+            <div class="col">
+                Col - Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores vitae architecto, velit,
+                itaque autem necessitatibus voluptatibus officiis.
+            </div>
+            <div class="col-auto">
+                Col Auto
+            </div>
+        </div>
+    </header>
+    <div class="ms-page-wrapper">
+        <!-- sidebar  -->
+        <div class="ms-sidebar">
+            <div>home</div>
+            <div>stats</div>
+            <div>signals</div>
+            <div class="mt-auto">Mt-auto</div>
+        </div>
+        <main class="ms-bg-main">
+            <!-- header main  -->
+            <section class="container-fluid ms-bg-blue">
+                <div class="row flex-column flex-md-row">
+                    <div class="col order-md-3">
+                        nuovo
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur omnis eaque optio odio
+                            enim quibusdam sapiente quas, amet quia quis non veniam alias nihil nam aperiam voluptatibus
+                            expedita dolorem eos?
+                        </p>
+                    </div>
+                    <div class="col order-md-1">boolean</div>
+                    <div class="col order-md-2">studenti</div>
+                </div>
+            </section>
+            <section class="container-fluid">
+                <div class="row flex-column flex-lg-row">
+                    <div class="col">
+                        <div class="card">
+                            <h4>Prossime classi</h4>
+                        </div>
+                        <div class="card">
+                            <h4>F.A.Q.</h4>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <h4>To-do</h4>
+                        </div>
+                        <div class="card">
+                            <h4>Utenti attivi</h4>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
 
 
 
