feat: add responsive sidebar

--- a/index.html
+++ b/index.html
@@ -102,10 +102,37 @@
     <div class="ms-page-wrapper">
         <!-- sidebar  -->
         <div class="ms-sidebar">
-            <div>home</div>
-            <div>stats</div>
-            <div>signals</div>
-            <div class="mt-auto">Mt-auto</div>
+            <nav>
+                <ul class="list-unstyled text-center">
+                    <li class="pb-2 pb-lg-3">
+                        <a class="d-flex justify-content-center justify-content-lg-start align-items-center gap-lg-3"
+                            href="#">
+                            <span><i class="fa-solid fa-house"></i></span>
+                            <span class="d-none d-lg-inline-block">Home</span>
+                        </a>
+                    </li>
+                    <li class="pb-2 pb-lg-3">
+                        <a class="d-flex justify-content-center justify-content-lg-start align-items-center gap-lg-3"
+                            href="#">
+                            <span><i class="fa-solid fa-chart-simple"></i></span>
+                            <span class="d-none d-lg-inline-block">Stats</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="d-flex justify-content-center justify-content-lg-start align-items-center gap-lg-3"
+                            href="#">
+                            <span><i class="fa-solid fa-signal"></i></span>
+                            <span class="d-none d-lg-inline-block">Signals</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="mt-auto">
+                <a class="d-flex justify-content-center justify-content-lg-start align-items-center gap-lg-3" href="#">
+                    <span class="text-center"><i class="fa-solid fa-gear"></i></span>
+                    <span class="d-none d-lg-inline-block">Admin</span>
+                </a>
+            </div>
         </div>
         <!-- main  -->
         <main class="ms-bg-main">
