feat: add faq + to-do section

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <!-- main section  -->
             <section class="container-fluid">
                 <div class="row flex-column flex-lg-row">
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 mb-4">
                         <div class="card mb-4">
                             <h3 class="card-header">Prossime Classi</h3>
 
@@ -577,7 +577,32 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="card">
-                            <h4>To-do</h4>
+                            <h3 class="card-header">To-do</h3>
+
+                            <div class="card-body">
+                                <div class="form-control px-0">
+                                    <div class="form-check border-bottom ms-form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                        <label class="form-check-label" for="flexCheckDefault">
+                                            Kickoff nuove classi
+                                        </label>
+                                    </div>
+                                    <div class="form-check border-bottom ms-form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+                                        <label class="form-check-label" for="flexCheckChecked">
+                                            Lezione su Bootstrap 5 in classe #75
+                                        </label>
+                                    </div>
+                                    <div class="form-check ms-form-check mb-0">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+                                        <label class="form-check-label" for="flexCheckChecked">
+                                            Controllare username github studenti
+                                        </label>
+                                    </div>
+                                </div>
+
+                            </div>
+
                         </div>
                         <div class="card">
                             <h4>Utenti attivi</h4>
