--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="card">
+                        <div class="card mb-4">
                             <h3 class="card-header">To-do</h3>
 
                             <div class="card-body">
