feat: add stats section

--- a/index.html
+++ b/index.html
@@ -164,28 +164,28 @@
                                         <input type="text" class="form-control" id="inputSurname">
                                     </div>
                                     <div class="col-12 col-md-6">
-                                        <label for="inputEmail4" class="form-label">Email</label>
+                                        <label for="inputEmail1" class="form-label">Email</label>
                                         <div class="input-group">
                                             <span class="input-group-text" id="basic-addon1">@</span>
-                                            <input type="text" class="form-control" aria-label="Username"
-                                                aria-describedby="basic-addon1">
+                                            <input id="inputEmail1" type="text" class="form-control"
+                                                aria-label="Username" aria-describedby="basic-addon1">
                                         </div>
                                     </div>
                                     <div class="col-12 col-md-6">
-                                        <label for="inputPassword4" class="form-label">Password</label>
-                                        <input type="password" class="form-control" id="inputPassword4">
+                                        <label for="inputPassword1" class="form-label">Password</label>
+                                        <input type="password" class="form-control" id="inputPassword1">
                                     </div>
                                     <div class="col-12 col-md-6">
-                                        <label for="inputEmail4" class="form-label">Indirizzo Email</label>
+                                        <label for="inputEmail2" class="form-label">Indirizzo Email</label>
                                         <div class="input-group">
                                             <span class="input-group-text" id="basic-addon1">@</span>
-                                            <input type="text" class="form-control" aria-label="Username"
-                                                aria-describedby="basic-addon1">
+                                            <input id="inputEmail2" type="text" class="form-control"
+                                                aria-label="Username" aria-describedby="basic-addon1">
                                         </div>
                                     </div>
                                     <div class="col-12 col-md-6">
-                                        <label for="inputPassword4" class="form-label">Password</label>
-                                        <input type="password" class="form-control" id="inputPassword4">
+                                        <label for="inputPassword2" class="form-label">Password</label>
+                                        <input type="password" class="form-control" id="inputPassword2">
                                     </div>
                                     <div class="col-12">
                                         <label for="inputAddress" class="form-label">Indirizzo</label>
@@ -319,12 +319,12 @@
                                         <tbody>
                                             <!-- row 1  -->
                                             <tr>
-                                                <td scope="row" class="d-flex align-items-center gap-2">
-                                                    <div class="d-inline-block ms-table-logo-xs">
+                                                <td scope="row">
+                                                    <div class="d-inline-block align-middle ms-table-logo-xs">
                                                         <img class="img-fluid" src="img/class-avatar.jpg"
                                                             alt="class avatar">
                                                     </div>
-                                                    <span>Classe 75</span>
+                                                    <span class="align-middle">Classe 75</span>
                                                 </td>
                                                 <td class="d-none d-md-table-cell text-center">15 Feb 2021</td>
                                                 <td class="d-none d-md-table-cell text-center">20%</td>
@@ -344,12 +344,12 @@
                                             </tr>
                                             <!-- row 2  -->
                                             <tr>
-                                                <td scope="row" class="d-flex align-items-center gap-2">
-                                                    <div class="d-inline-block ms-table-logo-xs">
+                                                <td scope="row">
+                                                    <div class="d-inline-block align-middle ms-table-logo-xs">
                                                         <img class="img-fluid" src="img/class-avatar.jpg"
                                                             alt="class avatar">
                                                     </div>
-                                                    <span>Classe 75</span>
+                                                    <span class="align-middle">Classe 76</span>
                                                 </td>
                                                 <td class="d-none d-md-table-cell text-center">16 Feb 2021</td>
                                                 <td class="d-none d-md-table-cell text-center">20%</td>
@@ -369,12 +369,12 @@
                                             </tr>
                                             <!-- row 3  -->
                                             <tr>
-                                                <td scope="row" class="d-flex align-items-center gap-2">
-                                                    <div class="d-inline-block ms-table-logo-xs">
+                                                <td scope="row">
+                                                    <div class="d-inline-block align-middle ms-table-logo-xs">
                                                         <img class="img-fluid" src="img/class-avatar.jpg"
                                                             alt="class avatar">
                                                     </div>
-                                                    <span>Classe 77</span>
+                                                    <span class="align-middle">Classe 77</span>
                                                 </td>
                                                 <td class="d-none d-md-table-cell text-center">17 Feb 2021</td>
                                                 <td class="d-none d-md-table-cell text-center">20%</td>
@@ -394,12 +394,12 @@
                                             </tr>
                                             <!-- row 4  -->
                                             <tr>
-                                                <td scope="row" class="d-flex align-items-center gap-2">
-                                                    <div class="d-inline-block ms-table-logo-xs">
+                                                <td scope="row">
+                                                    <div class="d-inline-block align-middle ms-table-logo-xs">
                                                         <img class="img-fluid" src="img/class-avatar.jpg"
                                                             alt="class avatar">
                                                     </div>
-                                                    <span>Classe 78</span>
+                                                    <span class="align-middle">Classe 78</span>
                                                 </td>
                                                 <td class="d-none d-md-table-cell text-center">18 Feb 2021</td>
                                                 <td class="d-none d-md-table-cell text-center">20%</td>
@@ -419,12 +419,12 @@
                                             </tr>
                                             <!-- row 5  -->
                                             <tr>
-                                                <td scope="row" class="d-flex align-items-center gap-2">
-                                                    <div class="d-inline-block ms-table-logo-xs">
+                                                <td scope="row">
+                                                    <div class="d-inline-block align-middle ms-table-logo-xs">
                                                         <img class="img-fluid" src="img/class-avatar.jpg"
                                                             alt="class avatar">
                                                     </div>
-                                                    <span>Classe 79</span>
+                                                    <span class="align-middle">Classe 79</span>
                                                 </td>
                                                 <td class="d-none d-md-table-cell text-center">19 Feb 2021</td>
                                                 <td class="d-none d-md-table-cell text-center">20%</td>
@@ -444,12 +444,12 @@
                                             </tr>
                                             <!-- row 6  -->
                                             <tr>
-                                                <td scope="row" class="d-flex align-items-center gap-2">
-                                                    <div class="d-inline-block ms-table-logo-xs">
+                                                <td scope="row">
+                                                    <div class="d-inline-block align-middle ms-table-logo-xs">
                                                         <img class="img-fluid" src="img/class-avatar.jpg"
                                                             alt="class avatar">
                                                     </div>
-                                                    <span>Classe 80</span>
+                                                    <span class="align-middle">Classe 80</span>
                                                 </td>
                                                 <td class="d-none d-md-table-cell text-center">20 Feb 2021</td>
                                                 <td class="d-none d-md-table-cell text-center">20%</td>
@@ -469,12 +469,12 @@
                                             </tr>
                                             <!-- row 7  -->
                                             <tr>
-                                                <td scope="row" class="d-flex align-items-center gap-2">
-                                                    <div class="d-inline-block ms-table-logo-xs">
+                                                <td scope="row">
+                                                    <div class="d-inline-block align-middle ms-table-logo-xs">
                                                         <img class="img-fluid" src="img/class-avatar.jpg"
                                                             alt="class avatar">
                                                     </div>
-                                                    <span>Classe 81</span>
+                                                    <span class="align-middle">Classe 81</span>
                                                 </td>
                                                 <td class="d-none d-md-table-cell text-center">21 Feb 2021</td>
                                                 <td class="d-none d-md-table-cell text-center">20%</td>
@@ -494,12 +494,12 @@
                                             </tr>
                                             <!-- row 8  -->
                                             <tr>
-                                                <td scope="row" class="d-flex align-items-center gap-2">
-                                                    <div class="d-inline-block ms-table-logo-xs">
+                                                <td scope="row">
+                                                    <div class="d-inline-block align-middle ms-table-logo-xs">
                                                         <img class="img-fluid" src="img/class-avatar.jpg"
                                                             alt="class avatar">
                                                     </div>
-                                                    <span>Classe 82</span>
+                                                    <span class="align-middle">Classe 82</span>
                                                 </td>
                                                 <td class="d-none d-md-table-cell text-center">22 Feb 2021</td>
                                                 <td class="d-none d-md-table-cell text-center">20%</td>
@@ -529,13 +529,13 @@
                             <div class="accordion" id="accordion-faq">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                            data-bs-target="#collapseOne" aria-expanded="true"
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
                                             aria-controls="collapseOne">
                                             Come aggiungere un nuovo studente?
                                         </button>
                                     </h2>
-                                    <div id="collapseOne" class="accordion-collapse collapse show"
+                                    <div id="collapseOne" class="accordion-collapse collapse"
                                         data-bs-parent="#accordion-faq">
                                         <div class="accordion-body">
                                             Clicca sul + in alto nella sezione blu.
@@ -576,6 +576,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
+                        <!-- checklist  -->
                         <div class="card mb-4">
                             <h3 class="card-header">To-do</h3>
 
@@ -594,8 +595,8 @@
                                         </label>
                                     </div>
                                     <div class="form-check ms-form-check mb-0">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
-                                        <label class="form-check-label" for="flexCheckChecked">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckLast">
+                                        <label class="form-check-label" for="flexCheckLast">
                                             Controllare username github studenti
                                         </label>
                                     </div>
@@ -604,8 +605,23 @@
                             </div>
 
                         </div>
-                        <div class="card">
-                            <h4>Utenti attivi</h4>
+                        <!-- stats  -->
+                        <div class="card p-3 mb-4">
+                            <div class="card">
+                                <img src="./img/stats.jpeg" class="card-img-top" alt="stats">
+                                <div class="card-body">
+                                    <h5 class="card-title">Utenti attivi</h5>
+                                    <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Gennaio: 1200</li>
+                                    <li class="list-group-item">Febbraio: 800</li>
+                                    <li class="list-group-item">Marzo: 1500</li>
+                                </ul>
+                                <div class="card-body">
+                                    <a href="#" class="card-link ms-active-link">Visualizza report approfondito</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
