--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- /bootstrap css  -->
+    <!-- chart.js  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js"
+        integrity="sha512-L0Shl7nXXzIlBSUUPpxrokqq4ojqgZFQczTYlGjzONGTDAcLremjwaWv5A+EDLnxhQzY5xUZPWLOLqYRkY0Cbw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- /chart.js  -->
     <!-- font awesome  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -81,12 +86,12 @@
                     </div>
                 </div>
                 <!-- commands  -->
-                <div class="col-auto d-flex align-items-center gap-lg-3" role="button">
+                <div class="col-auto d-flex align-items-center gap-lg-3 p-0" role="button">
                     <i class="d-none d-lg-block fa-solid fa-list-ul"></i>
                     <i class="d-none d-lg-block fas fas fa-circle-question"></i>
                     <i class="d-none d-lg-block fas fa-ellipsis-vertical"></i>
                     <div class="dropdown">
-                        <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn bell" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-bell" style="color: #ff8f00;"></i>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
@@ -104,33 +109,37 @@
         <div class="ms-sidebar">
             <nav>
                 <ul class="list-unstyled text-center">
-                    <li class="pb-2 pb-lg-3">
+                    <li class="pb-2 pb-lg-3 ms-tooltip">
                         <a class="d-flex justify-content-center justify-content-lg-start align-items-center gap-lg-3"
                             href="#">
-                            <span><i class="fa-solid fa-house"></i></span>
+                            <span class=""><i class=" fa-solid fa-house"></i></span>
                             <span class="d-none d-lg-inline-block">Home</span>
+                            <span class="ms-tooltiptext">Home</span>
                         </a>
                     </li>
-                    <li class="pb-2 pb-lg-3">
+                    <li class="pb-2 pb-lg-3 ms-tooltip">
                         <a class="d-flex justify-content-center justify-content-lg-start align-items-center gap-lg-3"
                             href="#">
                             <span><i class="fa-solid fa-chart-simple"></i></span>
                             <span class="d-none d-lg-inline-block">Stats</span>
+                            <span class="ms-tooltiptext">Stats</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="ms-tooltip">
                         <a class="d-flex justify-content-center justify-content-lg-start align-items-center gap-lg-3"
                             href="#">
                             <span><i class="fa-solid fa-signal"></i></span>
                             <span class="d-none d-lg-inline-block">Signals</span>
+                            <span class="ms-tooltiptext">Signals</span>
                         </a>
                     </li>
                 </ul>
             </nav>
-            <div class="mt-auto">
+            <div class="mt-auto ms-tooltip">
                 <a class="d-flex justify-content-center justify-content-lg-start align-items-center gap-lg-3" href="#">
                     <span class="text-center"><i class="fa-solid fa-gear"></i></span>
                     <span class="d-none d-lg-inline-block">Admin</span>
+                    <span class="ms-tooltiptext">Admin</span>
                 </a>
             </div>
         </div>
@@ -176,7 +185,7 @@
                                         <input type="password" class="form-control" id="inputPassword1">
                                     </div>
                                     <div class="col-12 col-md-6">
-                                        <label for="inputEmail2" class="form-label">Indirizzo Email</label>
+                                        <label for="inputEmail2" class="form-label">Conferma Email</label>
                                         <div class="input-group">
                                             <span class="input-group-text" id="basic-addon1">@</span>
                                             <input id="inputEmail2" type="text" class="form-control"
@@ -184,7 +193,7 @@
                                         </div>
                                     </div>
                                     <div class="col-12 col-md-6">
-                                        <label for="inputPassword2" class="form-label">Password</label>
+                                        <label for="inputPassword2" class="form-label">Conferma Password</label>
                                         <input type="password" class="form-control" id="inputPassword2">
                                     </div>
                                     <div class="col-12">
@@ -249,7 +258,7 @@
                                     </div>
                                     <div class="col-md-2">
                                         <label for="inputZip" class="form-label">CAP</label>
-                                        <input type="text" class="form-control" id="inputZip">
+                                        <input type="number" class="form-control" id="inputZip">
                                     </div>
                                     <div class="mb-3">
                                         <label for="formFile" class="form-label">Foto</label>
@@ -304,11 +313,11 @@
                             <h3 class="card-header">Prossime Classi</h3>
 
                             <div class="card-body">
-                                <div class="table-responsive">
+                                <div class="table-responsive ms-table">
                                     <table class="table table-hover table-nowrap">
                                         <thead class="thead-light">
                                             <tr>
-                                                <td scope="col" class="w-50">Nome</td>
+                                                <td scope="col" class="col-6 col-md-4">Nome</td>
                                                 <td scope="col" class="d-none d-md-table-cell text-center">Data inizio
                                                 </td>
                                                 <td scope="col" class="d-none d-md-table-cell text-center">ROI</td>
